--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 
     <div class="header">
-        <h1>Breathe Code Photo Feed</h1>
+        <div>
+             <h1>Breathe Code Photo Feed</h1>
+        </div>
     </div>
 
     <div id="post">
